--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,11 @@
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
     </style>
 
+    <style name="AppearanceFoundation.Caption" parent="TextAppearance.AppCompat.Caption">
+        <item name="android:fontFamily">@font/exo</item>
+        <item name="android:textColor">?attr/colorOnSurface</item>
+    </style>
+
     <style name="AppThemeMain" parent="AppTheme">
         <item name="colorPrimaryDark">@color/colorBackground</item>
     </style>
