--- a/app/src/main/res/layout/download_moreinfo.xml
+++ b/app/src/main/res/layout/download_moreinfo.xml
@@ -1,8 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:orientation="vertical">
 
     <TextView
         android:id="@android:id/title"
